--- a/index.html
+++ b/index.html
@@ -1,108 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lab 9</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab 9</title>
+    <style>
+      button {
+        margin: 3px;
+      }
 
-  <style>
-    button {
-      margin: 3px;
-    }
+      button:hover {
+        cursor: pointer;
+      }
 
-    button:hover {
-      cursor: pointer;
-    }
+      #first-num,
+      #second-num {
+        width: 60px;
+      }
 
-    #first-num,
-    #second-num {
-      width: 60px;
-    }
+      output {
+        border: 1px solid gray;
+        display: block;
+        height: 18px;
+        margin-top: 5px;
+        padding: 5px;
+        width: 240px;
+      }
 
-    output {
-      border: 1px solid gray;
-      display: block;
-      height: 18px;
-      margin-top: 5px;
-      padding: 5px;
-      width: 240px;
-    }
+      main {
+        width: 800px;
+      }
 
-    main {
-      width: 800px;
-    }
+      #error-btns {
+        column-gap: 5px;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 30px;
+        row-gap: 5px;
+      }
 
-    #error-btns {
-      column-gap: 5px;
-      display: flex;
-      flex-wrap: wrap;
-      margin-top: 30px;
-      row-gap: 5px;
-    }
+      #error-btns > * {
+        padding: 8px 2px;
+        width: 122px;
+      }
+    </style>
 
-    #error-btns>* {
-      padding: 8px 2px;
-      width: 122px;
-    }
-  </style>
-</head>
+    <!--TrackJS Script -->
+    <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+    <script>
+      window.TrackJS &&
+        TrackJS.install({
+          token: "fdf6077136864834b14d7572a43f67c5",
+        });
+    </script>
+  </head>
 
-<body>
-  <main>
-    <form>
-      <fieldset>
-        <legend>Error Calculator</legend>
-        <input name="first-num" id="first-num" />
-        <select name="operator" id="operator">
-          <option>+</option>
-          <option>-</option>
-          <option>*</option>
-          <option>/</option>
-        </select>
-        <input name="second-num" id="second-num" />
-        <button id="calculate">Calculate</button>
-        <br />
-        <output></output>
-      </fieldset>
-    </form>
+  <body>
+    <main>
+      <form>
+        <fieldset>
+          <legend>Error Calculator</legend>
+          <input name="first-num" id="first-num" />
+          <select name="operator" id="operator">
+            <option>+</option>
+            <option>-</option>
+            <option>*</option>
+            <option>/</option>
+          </select>
+          <input name="second-num" id="second-num" />
+          <button id="calculate">Calculate</button>
+          <br />
+          <output></output>
+        </fieldset>
+      </form>
 
-    <section id="error-btns">
-      <button>Console Log</button>
-      <button>Console Error</button>
-      <button>Console Count</button>
-      <button>Console Warn</button>
-      <button>Console Assert</button>
-      <button>Console Clear</button>
-      <button>Console Dir</button>
-      <button>Console dirxml</button>
-      <button>Console Group Start</button>
-      <button>Console Group End</button>
-      <button>Console Table</button>
-      <button>Start Timer</button>
-      <button>End Timer</button>
-      <button>Console Trace</button>
-      <button>Trigger a Global Error</button>
-    </section>
-  </main>
+      <section id="error-btns">
+        <button id="log">Console Log</button>
+        <button id="error">Console Error</button>
+        <button id="count">Console Count</button>
+        <button id="warn">Console Warn</button>
+        <button id="assert">Console Assert</button>
+        <button id="clear">Console Clear</button>
+        <button id="dir">Console Dir</button>
+        <button id="dirxml">Console dirxml</button>
+        <button id="group-start">Console Group Start</button>
+        <button id="group-end">Console Group End</button>
+        <button id="table">Console Table</button>
+        <button id="start-timer">Start Timer</button>
+        <button id="end-timer">End Timer</button>
+        <button id="trace">Console Trace</button>
+        <button id="trigger-error">Trigger a Global Error</button>
+      </section>
+    </main>
 
-  <script>
-    let form = document.querySelector('form');
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-      let output = document.querySelector('output');
-      let firstNum = document.querySelector('#first-num').value;
-      let secondNum = document.querySelector('#second-num').value;
-      let operator = document.querySelector('#operator').value;
-      output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
-    });
+    <script>
+      class GlobalErr extends Error {
+        constructor(message) {
+          super(message);
+          this.name = "GlobalErr";
+        }
+      }
+      let form = document.querySelector("form");
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        let output = document.querySelector("output");
+        let firstNum = document.querySelector("#first-num").value;
+        let secondNum = document.querySelector("#second-num").value;
+        let operator = document.querySelector("#operator").value;
 
-    let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
+        try {
+          if (isNaN(firstNum) || isNaN(secondNum)) {
+            throw new GlobalErr("Please make sure the value is a number:)");
+          }
+          output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
+        } catch (error) {
+          if (error instanceof GlobalErr) {
+            output.innerHTML = "Error found: " + error.message;
+          } else {
+            output.innerHTML = "Error found: " + error.message;
+          }
+          console.error(error);
+        } finally {
+          console.log("Calculation finished.");
+        }
+      });
 
-    // Start your code here
-    // You may move this JS to another file if you wish
-  </script>
-</body>
+      // Start your code here
+      // You may move this JS to another file if you wish
+      document
+        .getElementById("log")
+        .addEventListener("click", () => console.log("Console Log Demo"));
+      document
+        .getElementById("error")
+        .addEventListener("click", () => console.error("Console Error Demo"));
+      document
+        .getElementById("count")
+        .addEventListener("click", () => console.count("Count Label"));
+      document
+        .getElementById("warn")
+        .addEventListener("click", () => console.warn("Console Warn Demo"));
 
+      document
+        .getElementById("assert")
+        .addEventListener("click", () =>
+          console.assert(false, "Console Assert Demo")
+        );
+      document
+        .getElementById("clear")
+        .addEventListener("click", () => console.clear());
+      document
+        .getElementById("dir")
+        .addEventListener("click", () => console.dir(document.body));
+      document
+        .getElementById("dirxml")
+        .addEventListener("click", () => console.dirxml(document));
+      document.getElementById("group-start").addEventListener("click", () => {
+        console.group("Group Example");
+        console.log("Inside Group");
+      });
+      document
+        .getElementById("group-end")
+        .addEventListener("click", () => console.groupEnd());
+      document.getElementById("table").addEventListener("click", () =>
+        console.table([
+          { name: "John", age: "30" },
+          { name: "Alcie", age: "14" },
+        ])
+      );
+      document
+        .getElementById("start-timer")
+        .addEventListener("click", () => console.time("Time"));
+      document
+        .getElementById("end-timer")
+        .addEventListener("click", () => console.timeEnd("Time"));
+      document
+        .getElementById("trace")
+        .addEventListener("click", () => console.trace("Console Trace Demo"));
+
+      document
+        .getElementById("trigger-error")
+        .addEventListener("click", () =>
+          console.error("Error: Something went wrong!")
+        );
+
+      document.getElementById("globalError").addEventListener("click", () => {
+        try {
+          aFunctionThatDoesNotExist();
+        } catch (error) {
+          console.error("Global Error Found: ", error);
+        }
+      });
+
+      // Global error handler
+      window.onerror = function (message, source, lineno, colno, error) {
+        console.error(
+          `Global Error Handler: ${message} at ${source}:${lineno}:${colno}`,
+          error
+        );
+        return true;
+      };
+    </script>
+  </body>
 </html>
